deployments/kubernetes/portalRouter.yaml

apiVersion: apps/v1
kind: Deployment
metadata: 
    name: portal-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            app: portal
    template:
        metadata:
            labels:
                app: portal
        spec:
            containers:
            -   name: portal
                image: mattackard/kube-portal:v4.0
                ports:
                -   containerPort: 8081
