deployments/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingressname
spec:
  tls:
  - hosts:
    - '*.our-server.net'
    secretName: our-server-net-tls
  rules:
  - host: www.our-server.com
    http:
      paths:
      - path: /
        backend:
          serviceName: zach-server
          servicePort: 4000
---
apiVersion: v1
kind: Pod
metadata:
  name: ingresscontroller
  labels:
    app: ingress
spec:
  containers:
  - name: ingresscontroller
    image: jtheiss19/ingress-controller:latest
    ports:
    - containerPort: 80
    - containerPort: 8080
    volumeMounts:
    - name: config-volume
      mountPath: /root/.kube/
  volumes:
  - name: config-volume
    configMap:
      name: ingress
---
apiVersion: v1
kind: Service
metadata:
  name: ingressnode
  labels:
    name: node
spec:
  type: NodePort
  ports:
    - port: 80
      nodePort: 30100
      targetPort: 80
  selector:
    app: ingress
---
apiVersion: v1
kind: Service
metadata:
  name: ingressnode2
  labels:
    name: node
spec:
  type: NodePort
  ports:
    - port: 8080
      nodePort: 30101
      targetPort: 8080
  selector:
    app: ingress
